[gd_scene load_steps=15 format=3 uid="uid://md2kq64billi"]

[ext_resource type="Texture2D" uid="uid://bm3til2u5gqqo" path="res://assets/user_interface/crosshair.png" id="1_lmgon"]
[ext_resource type="Script" uid="uid://ceyad5u7wu3tc" path="res://scripts/user_interface/item_interface.gd" id="2_xsrv6"]
[ext_resource type="Resource" uid="uid://vlpfuwdwmqc1" path="res://assets/user_interface/item_textures.tres" id="3_sdud1"]
[ext_resource type="StyleBox" uid="uid://bu7i6de5fb5kq" path="res://assets/user_interface/selected_slot.tres" id="4_aisij"]
[ext_resource type="StyleBox" uid="uid://dinbw5v8q62m6" path="res://assets/user_interface/unselected_slot.tres" id="5_prbuy"]
[ext_resource type="Script" uid="uid://ooncf0yjg5au" path="res://scripts/user_interface/stat_interface.gd" id="6_5kqoc"]
[ext_resource type="Shader" uid="uid://cyidesd14juan" path="res://shaders/blood_overlay.gdshader" id="7_xsrv6"]
[ext_resource type="Texture2D" uid="uid://dmctioqbem5du" path="res://assets/user_interface/blood_overlay.png" id="8_sdud1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sdud1"]
shader = ExtResource("7_xsrv6")
shader_parameter/bloodiness = 0.0
shader_parameter/dist_exponent = 2.39
shader_parameter/alpha_offset = 0.22
shader_parameter/brightness = 0.3

[sub_resource type="Curve" id="Curve_sdud1"]
_data = [Vector2(0, 1), 0.0, 0.140701, 0, 0, Vector2(1, 0), -0.457047, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5sh7"]
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0u6gl"]
bg_color = Color(0, 0, 0, 0.560784)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27mel"]
bg_color = Color(0.34, 0.34, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqv2w"]
bg_color = Color(1, 0.911667, 0.47, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BloodTex" type="TextureRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_sdud1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -4.0
offset_right = -1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_sdud1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_lmgon")
expand_mode = 1

[node name="ItemInterface" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xsrv6")
fade_curve = SubResource("Curve_sdud1")
item_textures = ExtResource("3_sdud1")
selected_style = ExtResource("4_aisij")
unselected_style = ExtResource("5_prbuy")

[node name="HBoxContainer" type="HBoxContainer" parent="ItemInterface"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1

[node name="Slot0" type="Panel" parent="ItemInterface/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = ExtResource("5_prbuy")

[node name="TextureRect" type="TextureRect" parent="ItemInterface/HBoxContainer/Slot0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Slot1" type="Panel" parent="ItemInterface/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = ExtResource("5_prbuy")

[node name="TextureRect" type="TextureRect" parent="ItemInterface/HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Slot2" type="Panel" parent="ItemInterface/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = ExtResource("5_prbuy")

[node name="TextureRect" type="TextureRect" parent="ItemInterface/HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Slot3" type="Panel" parent="ItemInterface/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = ExtResource("5_prbuy")

[node name="TextureRect" type="TextureRect" parent="ItemInterface/HBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="StatInterface" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.3
anchor_bottom = 0.142
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_5kqoc")

[node name="MarginContainer" type="MarginContainer" parent="StatInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="StatInterface/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="StatInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Panel" type="Panel" parent="StatInterface/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_c5sh7")

[node name="MarginContainer" type="MarginContainer" parent="StatInterface/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="StaminaBar" type="ProgressBar" parent="StatInterface/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_0u6gl")
theme_override_styles/fill = SubResource("StyleBoxFlat_27mel")
value = 62.95

[node name="HBoxContainer2" type="HBoxContainer" parent="StatInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FlashlightPanel" type="Panel" parent="StatInterface/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_c5sh7")

[node name="MarginContainer" type="MarginContainer" parent="StatInterface/MarginContainer/VBoxContainer/HBoxContainer2/FlashlightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="FlashlightBar" type="ProgressBar" parent="StatInterface/MarginContainer/VBoxContainer/HBoxContainer2/FlashlightPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_0u6gl")
theme_override_styles/fill = SubResource("StyleBoxFlat_tqv2w")
value = 62.95
